# gesture_rec

./: CMakeLists.txt  package.xml  text.txt
msg/: BayesFilterStateDist.msg
src/: .~lock.batch_artichokes1.csv#  Batch_1.csv  Batch_artichokes2.csv  Batch_beef_curry.csv  Batch_carduni2.csv  Batch_chow_mein.csv  Batch_falafel.csv  Batch_puff_pastry.csv  Batch_spanish_rice.csv  batch_artichokes1.csv  h2r_gesture.py  model_simulator.py  sim_talker.py  sim_tester.py  simulation_cooking.py  train_data.txt  train_data2.txt
src/object_lists/: list2.txt  list2.txt~  list3.txt  list4.txt
